[package]
name = "mpk-rs"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"

[dependencies]
async-trait = "0.1.86"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.1"
diqwest = "3.1.0"
futures = "0.3.31"
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
url = "2.5.4"

[dev-dependencies]
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
